# LifeSim

./: .gitignore  CMakeLists.txt  README.md
archive/include/: jparallel.h  mc_methods.h
archive/include/hyper_math/: ctensor.h  fcomplex.h  fourier_field.h  hypmath.h  qtensor.h  rng_engine.h
archive/lib/: ctensor.cpp  evaluator.cpp  fcomplex.cpp  fourier_analysis.cpp  hmath.cpp  mc_integration.cpp  random_engine.cpp  useful_algs.cpp
archive/src2/: boundary.cpp  ewald_sum.cpp  hyp-md.cpp  main.cpp  md.h
docs/: backup.1  key_concepts.md  out  references  todo
googletest_lib/: CMakeLists.txt  test1.cpp  test2.cpp
include/: backend.h  hmath  mc_methods.h
include/hyper_math/: complex_field.h  ctensor.h  fcomplex.h  fourier_field.h  htensor  hypmath.h  linear_alg.h  num_calculus.h  qtensor.h  rng_engine.h
lib/: CMakeLists.txt  complex_field.cpp  complex_tensors.cpp  ctensor.cpp  evaluator.cpp  fcomplex.cpp  fourier_analysis.cpp  hmath.cpp  hytensor.cpp  linear_alg.cpp  mc_integration.cpp  qtensor.cpp  random_engine.cpp  useful_algs.cpp
lifesim-frontend/: package-lock.json  package.json
lifesim-frontend/pages/: index.tsx
oth/: C4121  c4121_algs.cpp  if_only_there_was.rs
scripts/: C4121  c4121_algs.cpp  cmain.cpp  monte_carlo.py  references.cpp
src/: CMakeLists.txt  boundary.cpp  ewald_sum.cpp  hyp-md.cpp  hypmd  main.cpp  md.h  x1.rs
tests/: CMakeLists.txt  hmath_tests.cpp  test_one.cpp  test_two.cpp  tester.cpp  tester.h
tests/unit_tests/: CMakeLists.txt  tmain.cpp  utest_1.cpp  utests_x
